# ogl

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.MD  WORKSPACE  WORKSPACE.bazel  fix.patch  hello_shaders.cc  ogl.cc  shader.h
shaders/: shader.fs  shader.vs
