load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(name = "refresh_compile_commands")

cc_binary(
    name = "ogl",
    srcs = ["ogl.cc"],
    linkopts =
        [
            "-framework Cocoa",
            "-framework OpenGL",
            "-framework IOKit",
            "-framework CoreFoundation",
            "-framework Metal",
        ],
    deps = [
        "@glfw",
    ],
)
