load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(name = "refresh_compile_commands")

cc_library(
    name = "logl_headers",
    hdrs = [
        "shader.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@glad"
    ]
)

cc_binary(
    name = "ogl",
    srcs = ["ogl.cc"],
    linkopts =
        [
            "-framework Cocoa",
            "-framework OpenGL",
            "-framework IOKit",
            "-framework CoreFoundation",
            "-framework Metal",
        ],
    deps = [
        "@glfw",
        "@glad",
    ],
)
cc_binary(
    name = "hello_shaders",
    srcs = ["hello_shaders.cc"],
    linkopts =
        [
            "-framework Cocoa",
            "-framework OpenGL",
            "-framework IOKit",
            "-framework CoreFoundation",
            "-framework Metal",
        ],
    deps = [
        "@glfw",
        "@glad",
        ":logl_headers"
    ],
)
